# phylax-docs

./: LICENSE  README.md  contribute.mdx  credible-overview.mdx  development.mdx  docs.json  faq.mdx  glossary.mdx  introduction.mdx  mint.json  monitor-api.mdx  monitor-assertions.mdx  monitor-config.mdx  monitor-dashboard.mdx  monitor-extending.mdx  monitor-installation.mdx  monitor-quickstart.mdx  overview.mdx  quickstart.mdx  smart-contract-security.mdx  std-introduction.mdx  support.mdx
.github/: codespell_wordlist.txt
assertions-book/: assertions-book-intro.mdx  cheatcodes.mdx  generate-assertions-with-ai.mdx  patterns-intro.mdx  precompiles.mdx  previous-hacks-intro.mdx  previous-hacks.mdx
cloud/: introduction.mdx
credible/: assertion-patterns.mdx  cheatcodes.mdx  credible-config.mdx  credible-install.mdx  credible-introduction.mdx  credible-std-overview.mdx  dapp-guide.mdx  faq.mdx  glossary.mdx  ownership-verification.mdx  pcl-assertion-guide.mdx  pcl-quickstart.mdx  pcl-reference-guide.mdx  testing-assertions.mdx
monitor/: monitor-introduction.mdx  monitor-overview.mdx
phylax/: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.cross  README.md  SECURITY.md  introduction.mdx  makefile  mint.json
phylax-monitor/: README.md  introduction.mdx
phylax/.github/: CODEOWNERS
phylax/.github/ISSUE_TEMPLATE/: bug.yml  config.yml
phylax/.github/workflows/: ci.yml  docker.yml  lint.yml  release.yml  stale.yml  unit.yml
phylax/crates/api/: Cargo.toml
phylax/crates/api/src/: api.rs  auth.rs  docs.rs  error.rs  gen_docs.rs  handlers.rs  internal_bus.rs  lib.rs  routes.rs  task_state.rs  task_states.rs
phylax/crates/common/: Cargo.toml  README.md
phylax/crates/common/src/: git.rs  lib.rs  metrics.rs  subst.rs
phylax/crates/common/src/forge/: build.rs  error.rs  filter.rs  mod.rs  test.rs
phylax/crates/common/src/forge/script/: broadcast.rs  build.rs  cmd.rs  executor.rs  mod.rs  multi.rs  receipts.rs  runner.rs  sequence.rs  transaction.rs  verify_bundle.rs
phylax/crates/common/src/forge/script/verify/: mod.rs  sourcify.rs
phylax/crates/common/src/forge/script/verify/etherscan/: mod.rs  standard_json.rs
phylax/crates/config/: Cargo.toml
phylax/crates/config/src/: action.rs  alert.rs  api.rs  components.rs  config.rs  dirs.rs  error.rs  lib.rs  metrics.rs  orchestrator.rs  sensitive.rs  source.rs  spawnable.rs  substitute_env.rs  tracing_config.rs  watcher.rs
phylax/crates/core/: Cargo.toml  build.rs
phylax/crates/core/src/: builder.rs  dirs.rs  error.rs  exit.rs  lib.rs  node.rs  version.rs
phylax/crates/core/src/args/: log.rs  mod.rs  no_args.rs
phylax/crates/core/src/tasks/: lifecycle.rs  metric.rs  mod.rs  monitor.rs
phylax/crates/core/src/utils/: mod.rs  parse_utils.rs  task_utils.rs
phylax/crates/coreNG/: Cargo.toml
phylax/crates/coreNG/src/: error.rs  events.rs  lib.rs
phylax/crates/coreNG/src/activities/: mod.rs
phylax/crates/coreNG/src/activities/system/: api.rs  metrics.rs  mod.rs
phylax/crates/coreNG/src/activities/system/orchestrator/: activity.rs  error.rs  events.rs  mod.rs  task_controller.rs  task_handles.rs
phylax/crates/coreNG/src/activities/user_defined/: evm_action.rs  evm_alert.rs  evm_watcher.rs  mod.rs  webhook.rs
phylax/crates/coreNG/src/mocks/: mock_activity.rs  mock_context.rs  mock_task.rs  mod.rs
phylax/crates/coreNG/src/tasks/: dns.rs  error.rs  event_buffer.rs  mod.rs  spawn.rs  subscriptions.rs  task.rs
phylax/crates/coreNG/tests/: mod.rs  test_task.rs
phylax/crates/coreNG/tests/test_activities/: mod.rs
phylax/crates/evm/: Cargo.toml
phylax/crates/evm/src/: lib.rs
phylax/crates/evm/src/action/: mod.rs
phylax/crates/evm/src/action/evm/: config.rs
phylax/crates/evm/src/alert/: config.rs  error.rs  mod.rs
phylax/crates/evm/src/utils/: mod.rs
phylax/crates/evm/src/watcher/: config.rs  error.rs  mod.rs
phylax/crates/interfaces/: Cargo.toml
phylax/crates/interfaces/src/: activity.rs  context.rs  error.rs  event.rs  lib.rs  message.rs  spawnable.rs  state_registry.rs
phylax/crates/monitor/: Cargo.toml
phylax/crates/monitor/src/: error.rs  evm_watcher.rs  lib.rs
phylax/crates/monitor/src/evm_alert/: alert.rs
phylax/crates/notifications/: Cargo.toml
phylax/crates/notifications/src/: lib.rs
phylax/crates/notifications/src/chat_platform/: config.rs  mod.rs
phylax/crates/notifications/src/webhook/: config.rs  mod.rs
phylax/crates/respond/: Cargo.toml
phylax/crates/respond/src/: error.rs  evm_action.rs  lib.rs  webhook.rs
phylax/crates/runner/: Cargo.toml
phylax/crates/runner/src/: compile.rs  config.rs  error.rs  lib.rs  outcome.rs  runner.rs
phylax/crates/runner/src/accesses/: access_diff.rs  data_accesses.rs  mod.rs
phylax/crates/runner/tests/: integration_test.rs
phylax/crates/tasks/: Cargo.toml
phylax/crates/tasks/src/: activity.rs  error.rs  lib.rs  metrics.rs  monitors.rs  task.rs
phylax/crates/test-utils/: Cargo.toml
phylax/crates/test-utils/src/: lib.rs  macros.rs
phylax/crates/tracing/: Cargo.toml
phylax/crates/tracing/src/: error.rs  lib.rs
phylax/crates/tracing/src/metrics/: mod.rs
phylax/crates/tracing/src/trace/: formatter.rs  layers.rs  mod.rs  test.rs
phylax/deploy/: docker-compose.yml
phylax/deploy/prometheus/: prometheus.yml
phylax/docs/: introduction.mdx
phylax/testdata/actions/: foundry.toml
phylax/testdata/actions/simple/: ExampleContract.sol  Simple.s.sol
phylax/testdata/alerts/: foundry.toml  package.json  remappings.txt
phylax/testdata/alerts/firing/: FiringAlert.t.sol
phylax/testdata/alerts/fork/: Fork.t.sol  ForkState.t.sol
phylax/testdata/alerts/import/: Import.t.sol
phylax/testdata/alerts/lib/phylax-std/src/: Alert.sol
phylax/testdata/alerts/simple/: SimpleAlert.t.sol
phylax/testdata/alerts/storage/: Storage.t.sol
snippets/: ass1-implementation-change.a.mdx  ass10-oracle-liveness.a.mdx  ass11-twap-deviation.a.mdx  ass12-erc4626-assets-shares.a.mdx  ass13-erc4626-deposit-withdraw.a.mdx  ass14-fee-verification.a.mdx  ass15-price-within-ticks.a.mdx  ass20-erc20-drain.a.mdx  (+13 more)
(+83 files in other folders)
