# Heavily inspired by Reth's Cargo.toml 
[workspace]
members = [
  "bin/phylax",
  "crates/api",
  "crates/config",
  "crates/monitor",
  "crates/respond",
  "crates/common",
  "crates/tracing",
  "crates/coreNG",
]
resolver = '2'


[workspace.package]
version = "0.0.1"
authors = ["Odysseas <odysseas@phylax.watch>"]
edition = "2021"
rust-version = "1.70"
license = "GPL-3.0-only	"
homepage = "https://phylax-systems.github.io/phylax"
repository = "https://github.com/phylax-systems/phylax"
exclude = [".github/"]

[profile.debug-fast]
inherits = "release"
debug = true

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[workspace.dependencies]
## phylax
phylax = { path = "./bin/phylax" }
phylax-core = { path = "./crates/coreNG" }
phylax-monitor = { path = "./crates/monitor" }
phylax-respond = { path = "./crates/respond" }
phylax-common = { path = "./crates/common" }
phylax-api = { path = "./crates/api" }
phylax-config = { path = "./crates/config" }
phylax-tracing = { path = "./crates/tracing" }

## eth
ethers-core = { version = "2.0", default-features = false }
ethers-solc = { version = "2.0", default-features = false, features = [
  "project-util",
  "svm-solc",
] }
ethers-providers = { version = "2.0", features = ["ws"] }
ethers = { version = "2.0" }

## alloy
alloy-primitives = "0.4.1"
alloy-dyn-abi = "0.4.1"
alloy-json-abi = "0.4.1"
alloy-sol-types = "0.4.1"
syn-solidity = "0.4.1"

## foundry
foundry-common = { git = "https://github.com/odyslam/foundry", branch = "minimal_fork" }
anvil = { git = "https://github.com/odyslam/foundry", branch = "minimal_fork" }
foundry-evm = { git = "https://github.com/odyslam/foundry", branch = "minimal_fork" }
forge = { git = "https://github.com/odyslam/foundry", branch = "minimal_fork" }
foundry-config = { git = "https://github.com/odyslam/foundry", branch = "minimal_fork" }
foundry-cli = { git = "https://github.com/odyslam/foundry", branch = "minimal_fork" }
foundry-utils = { git = "https://github.com/odyslam/foundry", branch = "minimal_fork" }
foundry-test-utils = { git = "https://github.com/odyslam/foundry", branch = "minimal_fork" }

# solc utils
foundry-compilers = { version = "0.1", default-features = false }
# block explorer utils
foundry-block-explorers = { version = "0.1", default-features = false }


## misc
tracing = "0.1.0"
tracing-appender = "0.2"
thiserror = "1.0.37"
eyre = "0.6"
color-eyre = "0.6"
serde_json = "1.0.94"
serde = "1.0"
serde_path_to_error = "0.1"
regex = "1.0"
once_cell = "1"
clap = { version = "4.0", features = ["derive", "env", "unicode", "wrap_help"] }

## tokio
tokio = { version = "1.21", features = ["full"] }
tokio-stream = "0.1.11"
reqwest = { version = "0.11.22", default-features = false, features = [
  "rustls-tls",
] }
http = "0.2"

## async
async-trait = "0.1.68"
futures = "0.3.26"
futures-util = "0.3.25"
flume = "0.11.0"

## testing
tempfile = "3.2.0"
tracing-test = "0.2.4"
mockito = "1.2.0"

sisyphus-tasks = "0.1.1"


## Patches

[patch.crates-io]

# sisyphus-tasks = { path = "../../odyslam/sisyphus" }

ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "949feb7a37f511b3f5a21dc23dc51ef29b33b949" }
ethers-addressbook = { git = "https://github.com/gakonst/ethers-rs", rev = "949feb7a37f511b3f5a21dc23dc51ef29b33b949" }
ethers-core = { git = "https://github.com/gakonst/ethers-rs", rev = "949feb7a37f511b3f5a21dc23dc51ef29b33b949" }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", rev = "949feb7a37f511b3f5a21dc23dc51ef29b33b949" }
ethers-contract-abigen = { git = "https://github.com/gakonst/ethers-rs", rev = "949feb7a37f511b3f5a21dc23dc51ef29b33b949" }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", rev = "949feb7a37f511b3f5a21dc23dc51ef29b33b949" }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs", rev = "949feb7a37f511b3f5a21dc23dc51ef29b33b949" }
ethers-middleware = { git = "https://github.com/gakonst/ethers-rs", rev = "949feb7a37f511b3f5a21dc23dc51ef29b33b949" }
ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs", rev = "949feb7a37f511b3f5a21dc23dc51ef29b33b949" }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", rev = "949feb7a37f511b3f5a21dc23dc51ef29b33b949" }

foundry-compilers = { git = "https://github.com/foundry-rs/compilers", rev = "0fc9af798b0eb92290796ec078b6e29f1e1fb844" }
foundry-block-explorers = { git = "https://github.com/foundry-rs/block-explorers", rev = "191a53ec7206c6a9d5c6a6a017718bfab68be" }

alloy-dyn-abi = { git = "https://github.com/alloy-rs/core/", rev = "8971476b27e5c1e3f6dfefa06f46b63bde89fe80" }
alloy-primitives = { git = "https://github.com/alloy-rs/core/", rev = "8971476b27e5c1e3f6dfefa06f46b63bde89fe80" }
alloy-json-abi = { git = "https://github.com/alloy-rs/core/", rev = "8971476b27e5c1e3f6dfefa06f46b63bde89fe80" }
alloy-sol-types = { git = "https://github.com/alloy-rs/core/", rev = "8971476b27e5c1e3f6dfefa06f46b63bde89fe80" }


# # Patch ethers-rs with a local checkout then run `cargo update -p ethers`
# [patch."https://github.com/gakonst/ethers-rs"]
# ethers = { path = "../ethers-rs" }
# ethers-addressbook = { path = "../ethers-rs/ethers-addressbook" }
# ethers-core = { path = "../ethers-rs/ethers-core" }
# ethers-contract = { path = "../ethers-rs/ethers-contract" }
# ethers-providers = { path = "../ethers-rs/ethers-providers" }
# ethers-signers = { path = "../ethers-rs/ethers-signers" }
# ethers-etherscan = { path = "../ethers-rs/ethers-etherscan" }
# ethers-solc = { path = "../ethers-rs/ethers-solc" }

# [patch.crates-io]
# revm = { path = "../revm/crates/revm" }

# [patch.crates-io]
# revm = { git = "https://github.com/bluealloy/revm" }
# revm-primitives = { git = "https://github.com/bluealloy/revm" }
# # patched for quantity U256 responses <https://github.com/recmo/uint/issues/224>
# ruint = { git = "https://github.com/mattsse/uint", branch = "matt/skip-leading-zeros" }


# [patch."https://github.com/odyslam/foundry"]
# foundry-cli = { path = "../phoundry/crates/cli" }
# foundry-common = { path = "../phoundry/crates/common" }
# foundry-evm = { path = "../phoundry/crates/evm" }
# foundry-config = { path = "../phoundry/crates/config" }
# forge = { path = "../phoundry/crates/forge" }
