# Heavily inspired by Reth's Cargo.toml 
[workspace]
members = [
  "bin/phylax",
  "crates/core",
  "crates/interfaces",
  "crates/runner",
  "crates/tasks",
  "crates/test-utils",
  "crates/tracing",
  "crates/config",
  "crates/notifications", 
  "crates/evm",
]
default-members = ["bin/phylax"]
resolver = '2'


[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[workspace.lints.clippy]
# These are some of clippy's nursery (i.e., experimental) lints that we like.
# By default, nursery lints are allowed. Some of the lints below have made good
# suggestions which we fixed. The others didn't have any findings, so we can
# assume they don't have that many false positives. Let's enable them to
# prevent future problems.
branches_sharing_code = "warn"
clear_with_drain = "warn"
derive_partial_eq_without_eq = "warn"
empty_line_after_outer_attr = "warn"
equatable_if_let = "warn"
imprecise_flops = "warn"
iter_on_empty_collections = "warn"
iter_with_drain = "warn"
large_stack_frames = "warn"
manual_clamp = "warn"
mutex_integer = "warn"
needless_pass_by_ref_mut = "warn"
nonstandard_macro_braces = "warn"
or_fun_call = "warn"
path_buf_push_overwrite = "warn"
read_zero_byte_vec = "warn"
redundant_clone = "warn"
suboptimal_flops = "warn"
suspicious_operation_groupings = "warn"
trailing_empty_array = "warn"
trait_duplication_in_bounds = "warn"
transmute_undefined_repr = "warn"
tuple_array_conversions = "warn"
uninhabited_references = "warn"
unused_peekable = "warn"
unused_rounding = "warn"
useless_let_if_seq = "warn"

# These are nursery lints which have findings. Allow them for now. Some are not
# quite mature enough for use in our codebase and some we don't really want.
# Explicitly listing should make it easier to fix in the future.
trivial_regex = "allow"
as_ptr_cast_mut = "allow"
cognitive_complexity = "allow"
collection_is_never_read = "allow"
debug_assert_with_mut_call = "allow"
empty_line_after_doc_comments = "allow"
fallible_impl_from = "allow"
future_not_send = "allow"
iter_on_single_items = "allow"
missing_const_for_fn = "allow"
needless_collect = "allow"
non_send_fields_in_send_ty = "allow"
option_if_let_else = "allow"
redundant_pub_crate = "allow"
significant_drop_in_scrutinee = "allow"
significant_drop_tightening = "allow"
string_lit_as_bytes = "allow"
type_repetition_in_bounds = "allow"
unnecessary_struct_initialization = "allow"
use_self = "allow"

[workspace.package]
version = "0.0.1"
authors = ["Phylax Systems Inc"]
edition = "2021"
rust-version = "1.76"
license = "GPL-3.0-only	"
homepage = "https://phylax-systems.github.io/phylax"
repository = "https://github.com/phylax-systems/phylax"
exclude = [".github/"]

[profile.debug-fast]
inherits = "release"
debug = true

[profile.maxperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[workspace.dependencies]


# phylax
phylax-core = { path = "./crates/core" }
phylax-interfaces = { path = "./crates/interfaces" }
phylax-tasks = { path = "./crates/tasks" }
phylax-tracing = { path = "./crates/tracing" }
phylax-test-utils = { path = "./crates/test-utils" }
phylax-config = { path = "./crates/config" }
phylax-evm = { path = "./crates/evm" }
phylax-notifications = { path = "./crates/notifications" }
phylax-runner = { path = "./crates/runner" }

# reth

# commit: https://github.com/paradigmxyz/reth/commit/199503531c4e66cba702844a5a8224620ee0e877
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth.git", rev = "1995035" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth.git", rev = "1995035" }
reth-metrics = { git = "https://github.com/paradigmxyz/reth.git", rev = "1995035" }

# foundry
foundry-evm = { git = "https://github.com/phylax-systems/phoundry", rev = "e889bf" }
foundry-cli = { git = "https://github.com/phylax-systems/phoundry", rev = "e889bf" }
foundry-common = { git = "https://github.com/phylax-systems/phoundry", rev = "e889bf" }
foundry-linking = { git = "https://github.com/phylax-systems/phoundry", rev = "e889bf" }
foundry-config = { git = "https://github.com/phylax-systems/phoundry", rev = "e889bf" }
forge = { git = "https://github.com/phylax-systems/phoundry", rev = "e889bf" }
forge-cmd = { git = "https://github.com/phylax-systems/phoundry", rev = "e889bf" }
foundry-compilers = { version = "=0.8.0", default-features = false }

## alloy
alloy-sol-macro = "0.7.1"
alloy-sol-types = "0.7.1"
alloy-primitives = "0.7.1"
alloy-chains = "0.1.2"
alloy-provider = { version  = "0.1.2",features = ["reqwest", "ws", "ipc"]}
alloy-rpc-types-eth = "0.1.2"
alloy-network = "0.1.2"
alloy-transport = "0.1.2"

## revm
revm-primitives = { version = "=4.0.0", default-features = false }

## misc
thiserror = "1.0.37"
eyre = "0.6"
color-eyre = "0.6"
serde_json = "1.0.94"
serde = { version = "1.0", features = ["derive"] }
kanal = "=0.1.0-pre8"
serde_path_to_error = "0.1"
regex = "1.0"
once_cell = "1"
clap = { version = "4.0", features = ["derive", "env", "unicode", "wrap_help"] }

## tracing/metrics/logging
tracing = "0.1.4"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
    "json",
] }
tracing-journald = "0.3"
tracing-logfmt = "0.3.3"
rolling-file = "0.2.0"
opentelemetry = { version = "0.23.0", features = ["trace", "logs", "metrics"] }
opentelemetry_sdk = { version = "0.23.0", features = ["trace", "logs", "metrics", "rt-tokio"] }
opentelemetry-stdout = { version = "0.4.0", features = ["trace", "logs", "metrics"] }

## tokio
tokio = { version = "1.21", features = ["full"] }
tokio-stream = "0.1.15"
tokio-util = "0.7.11"
reqwest = { version = "0.12.0", default-features = false, features = [
  "rustls-tls",
] }
http = "1.1"

## async
async-trait = "0.1.68"
dashmap = "5.5.3"
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
rayon = "1.10.0"

## testing
tempfile = "3.2.0"
tokio-test = "0.4.4"
tracing-test = "0.2.4"
mockito = "1.2.0"
const-str = "0.5.6"
dirs-next = "2.0.0"
http-serde = "2.1.0"
itertools = "0.12.1"
shellexpand = "3.1.0"
strum = "0.26.2"
toml = "0.8.12"
vergen = "8.3.1"

