[package]
name = "phylax-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

# error handling
eyre.workspace = true
phylax-tracing.workspace = true
color-eyre.workspace = true
thiserror.workspace = true
yansi = "1.0.0-gamma"


# metrics
serde.workspace = true
serde_json.workspace = true
sisyphus-tasks.workspace = true

# ethers
ethers-core.workspace = true
ethers.workspace = true

## alloy
alloy-dyn-abi.workspace = true
alloy-primitives.workspace = true
alloy-json-abi.workspace = true
alloy-sol-types.workspace = true

# foundryalloy-primitives.workspace = true
forge.workspace = true
foundry-cli.workspace = true
foundry-config.workspace = true
foundry-evm.workspace = true
foundry-common.workspace = true
foundry-compilers.workspace = true
foundry-utils.workspace = true
foundry-test-utils.workspace = true
foundry-block-explorers.workspace = true

reqwest.workspace = true
once_cell = "1.18"
clap = { version = "4", features = ["derive"] }
regex = "1"
tokio = "1"
hex = "0.4"
futures = "0.3"
parking_lot = "0.12"
dunce = "1"
semver = "1"
async-trait.workspace = true
