[package]
name = "phylax-config"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
phylax-interfaces.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml = { workspace = true, features = ["parse"] }
regex = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
phylax-test-utils.workspace = true
phylax-tasks.workspace = true
tokio.workspace = true
