[package]
name = "phylax-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# phylax
phylax-tasks.workspace = true
phylax-tracing.workspace = true
phylax-interfaces.workspace = true
phylax-runner.workspace = true

serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
kanal.workspace = true

clap.workspace = true

# error handling
eyre.workspace = true
color-eyre.workspace = true
thiserror.workspace = true
futures.workspace = true
futures-util.workspace = true

# misc
itertools = { workspace = true }
const-str = { workspace = true }
dirs-next = { workspace = true }
shellexpand = { workspace = true }
opentelemetry = { workspace = true }

[build-dependencies]
eyre.workspace = true
vergen = { workspace = true, features = ["build", "cargo", "git", "gitcl"] }

[dev-dependencies]
# TODO: Change package name back to 'test-utils' after it is possible to rename crates inherited by a workspace: 
# https://github.com/rust-lang/cargo/issues/12546#issuecomment-1764570239
phylax-test-utils.workspace = true
tokio-test.workspace = true
