[package]
name = "phylax-interfaces"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reth-tasks.workspace = true
kanal.workspace = true
serde.workspace = true
tokio.workspace = true
thiserror.workspace = true
tokio-util.workspace = true

[dev-dependencies]
tokio-test.workspace = true

