[package]
name = "phylax-notifications"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
serde.workspace = true
phylax-config.workspace = true
http = { workspace = true }
http-serde = { workspace = true }

[lints]
workspace = true
