[package]
name = "phylax-respond"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]

# phylax
phylax-config.workspace = true
phylax-tracing.workspace = true
phylax-common.workspace = true

# ethers
ethers-core.workspace = true
ethers.workspace = true

## alloy
alloy-dyn-abi.workspace = true
alloy-primitives.workspace = true
alloy-json-abi.workspace = true
alloy-sol-types.workspace = true

# foundryalloy-primitives.workspace = true
forge.workspace = true
foundry-cli.workspace = true
foundry-config.workspace = true
foundry-evm.workspace = true
foundry-common.workspace = true
foundry-compilers.workspace = true
foundry-utils.workspace = true
foundry-test-utils.workspace = true

# rest
color-eyre.workspace = true
eyre.workspace = true
hex = "0.4.3"
dunce = "1"
thiserror.workspace = true
async-trait.workspace = true
serde_json.workspace = true
serde.workspace = true
tokio.workspace = true
futures.workspace = true


# async
parking_lot = "0.12.1"

# webhooks
reqwest.workspace = true
serenity = "0.11.5"
slack-morphism = { version = "1.15", features = ["hyper", "axum"] }
base64 = "0.21.2"
url = { version = "2.3.1", features = ["serde"] }
flume.workspace = true
http.workspace = true
[dev-dependencies]
tokio.workspace = true
axum = { version = "0.7.1", features = ["macros"] }
mockito.workspace = true
