[package]
name = "phylax-tasks"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
exclude.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phylax-tracing.workspace = true
phylax-interfaces.workspace = true
reth-metrics.workspace = true
kanal.workspace = true
thiserror.workspace = true
eyre.workspace = true
once_cell.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true